# libft

./: .gitignore  Makefile  README.md  init.vim  main.c  main_c.c  main_di.c  main_p.c  main_s.c  main_u.c  main_xX.c  test.c
Core/m0/libft/: CMakeLists.txt  MakeFile  Makefile  a.out  ft_atoi.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_islower.c  ft_itoa.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstlast.c  ft_lstnew.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strdup.c  ft_striteri.c  ft_strlen.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  generated_prototypes.h  libft.h  proto.sh  test.c
Core/m0/libft/.cache/clangd/index/: ft_atoi.c.DE87673C1F9D2C81.idx  ft_bzero.c.CEB467DE8E507956.idx  ft_calloc.c.C4C7A70B46EE3AE8.idx  ft_isalnum.c.853D56ABCC1A25D7.idx  ft_isalpha.c.E384E0DD6C2277C9.idx  ft_isascii.c.E2C52CFDA79DCDBC.idx  ft_isblank.c.7E547C60BF455485.idx  (+41 more)
Core/m0/libft/include/: libft.h
Core/m0/libft/src/: a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  (+8 more)
Core/m0/libft/src/ex/: ft_islower.c  ft_isupper.c
(+288 files in other folders)
